added html for header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title>Captured</title>
   </head>
   <body>
-    <h1>Captured</h1>
+    <header class="homeHeader">
+      <div class="wrapper">
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
+          <div class="imgContainer">
+            <img src="./assets/header-box-image.jpg" alt="" />
+          </div>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
