adde hmlt for about and blog section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Captured</title>
   </head>
   <body>
+    <!-- HEADER -->
     <header class="homeHeader">
       <div class="wrapper">
         <nav>
@@ -22,7 +23,66 @@
             <img src="./assets/header-box-image.jpg" alt="" />
           </div>
         </nav>
+        <h1>Captured</h1>
       </div>
     </header>
+
+    <main id="mainContent">
+      <!-- ABOUT SECTION -->
+      <section class="about" id="about">
+        <div class="wrapper">
+          <h2>what is captured?</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+            quia voluptates labore ad quo, nulla inventore iure rerum expedita
+            asperiores doloribus, architecto laboriosam ut odio et neque sequi
+            cupiditate! Quam, optio beatae sunt earum nesciunt quia, corporis
+            quisquam repellendus culpa incidunt aspernatur in consequatur. Quod
+            harum iusto beatae nihil veritatis.
+          </p>
+          <a href="#" class="button">Find out more</a>
+        </div>
+      </section>
+
+      <!-- BLOG SECTION -->
+      <section class="blog">
+        <div class="wrapper">
+          <div class="row rowOne">
+            <div class="imgContainer">
+              <img src="./assets/left-image.jpg" alt="A camera on a tripod" />
+            </div>
+            <div class="textContainer">
+              <h3>Unlock you skills</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                suscipit libero blanditiis repellat reiciendis rerum cumque
+                reprehenderit expedita qui. Rem, illo. Tempore similique, culpa
+                in vero nemo deserunt sequi debitis quam esse, dolores unde!
+              </p>
+              <a href="#" class="button">Read more</a>
+            </div>
+          </div>
+          <div class="row rowTwo">
+            <div class="textContainer">
+              <h3>Getting new gear</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+                a molestias delectus fuga earum nesciunt perspiciatis!
+                Doloribus, vero ex quas consectetur laboriosam deserunt
+                reiciendis autem quidem. Laudantium numquam, rerum officiis non
+                quam nam in?
+              </p>
+              <a href="#" class="button">Read more</a>
+            </div>
+            <div class="imgContainer">
+              <img
+                src="./assets/right-image.jpg"
+                alt="A person holding a camera point down"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
