added html for info section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
 
     <title>Captured</title>
@@ -79,6 +86,66 @@
                 src="./assets/right-image.jpg"
                 alt="A person holding a camera point down"
               />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="info">
+        <div class="wrapper">
+          <div class="infoContainer">
+            <div class="iconContainer">
+              <i class="fa-solid fa-camera"></i>
+            </div>
+            <div class="textContainer">
+              <h3>Top Picks</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
+                provident amet est voluptatem tempore perspiciatis vitae
+                blanditiis exercitationem cum, sed officia cumque! Recusandae
+                consectetur sint dicta?
+              </p>
+            </div>
+          </div>
+          <div class="infoContainer">
+            <div class="iconContainer">
+              <i class="fa-solid fa-users"></i>
+            </div>
+            <div class="textContainer">
+              <h3>Community</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
+                provident amet est voluptatem tempore perspiciatis vitae
+                blanditiis exercitationem cum, sed officia cumque! Recusandae
+                consectetur sint dicta?
+              </p>
+            </div>
+          </div>
+          <div class="infoContainer">
+            <div class="iconContainer">
+              <i class="fa-solid fa-file"></i>
+            </div>
+            <div class="textContainer">
+              <h3>Blog</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
+                provident amet est voluptatem tempore perspiciatis vitae
+                blanditiis exercitationem cum, sed officia cumque! Recusandae
+                consectetur sint dicta?
+              </p>
+            </div>
+          </div>
+          <div class="infoContainer">
+            <div class="iconContainer">
+              <i class="fa-solid fa-phone"></i>
+            </div>
+            <div class="textContainer">
+              <h3>Get in Touch</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
+                provident amet est voluptatem tempore perspiciatis vitae
+                blanditiis exercitationem cum, sed officia cumque! Recusandae
+                consectetur sint dicta?
+              </p>
             </div>
           </div>
         </div>
