--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FONT AWESOME -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -146,6 +147,31 @@
                 blanditiis exercitationem cum, sed officia cumque! Recusandae
                 consectetur sint dicta?
               </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Profile -->
+
+      <section>
+        <div class="wrapper">
+          <div class="bgContainer"></div>
+          <div class="profileContainer">
+            <div class="imgContainer">
+              <img src="./assets/small-box.jpg" alt="" />
+            </div>
+            <div class="textContainer">
+              <h2>This month profile</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum
+                impedit expedita doloremque nostrum a nulla eius sequi, ex
+                cumque amet reprehenderit possimus laborum sed, dolorum tenetur
+                voluptatem sunt nesciunt iste ducimus consequatur consectetur.
+                Eligendi reiciendis similique iste excepturi ratione suscipit
+                omnis dolorum hic voluptatum corrupti!
+              </p>
+              <a href="#" class="buton">Find Out More</a>
             </div>
           </div>
         </div>
