added html for gallery and footer

--- a/index.html
+++ b/index.html
@@ -154,28 +154,47 @@
 
       <!-- Profile -->
 
-      <section>
+      <section class="profile" id="profile">
+        <div class="bgContainer"></div>
         <div class="wrapper">
-          <div class="bgContainer"></div>
-          <div class="profileContainer">
-            <div class="imgContainer">
-              <img src="./assets/small-box.jpg" alt="" />
-            </div>
-            <div class="textContainer">
-              <h2>This month profile</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum
-                impedit expedita doloremque nostrum a nulla eius sequi, ex
-                cumque amet reprehenderit possimus laborum sed, dolorum tenetur
-                voluptatem sunt nesciunt iste ducimus consequatur consectetur.
-                Eligendi reiciendis similique iste excepturi ratione suscipit
-                omnis dolorum hic voluptatum corrupti!
-              </p>
-              <a href="#" class="buton">Find Out More</a>
-            </div>
+          <div class="imgContainer">
+            <img src="./assets/small-box.jpg" alt="" />
+          </div>
+          <div class="textContainer">
+            <h2>This month profile</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum
+              impedit expedita doloremque nostrum a nulla eius sequi, ex cumque
+              amet reprehenderit possimus laborum sed, dolorum tenetur
+              voluptatem sunt nesciunt iste ducimus consequatur consectetur.
+              Eligendi reiciendis similique iste excepturi ratione suscipit
+              omnis dolorum hic voluptatum corrupti!
+            </p>
+            <a href="#" class="buton">Find Out More</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Gallery -->
+      <section class="gallery" id="gallery">
+        <div class="wrapper">
+          <div class="imgContainer">
+            <img src="./assets/gallery-image-1.jpg" alt="" />
+          </div>
+          <div class="imgContainer">
+            <img src="./assets/gallery-image-2.jpg" alt="" />
+          </div>
+          <div class="imgContainer">
+            <img src="./assets/gallery-image-3.jpg" alt="" />
           </div>
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="wrapper">
+        <p>Copyright © 2018 HackerYou</p>
+      </div>
+    </footer>
   </body>
 </html>
