added more styling for blog and header section

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
             <div class="textContainer">
               <h3>Getting new gear</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-                a molestias delectus fuga earum nesciunt perspiciatis!
-                Doloribus, vero ex quas consectetur laboriosam deserunt
-                reiciendis autem quidem. Laudantium numquam, rerum officiis non
-                quam nam in?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                suscipit libero blanditiis repellat reiciendis rerum cumque
+                reprehenderit expedita qui. Rem, illo. Tempore similique, culpa
+                in vero nemo deserunt sequi debitis quam esse, dolores unde!
               </p>
-              <a href="#" class="button">Read more</a>
+              <div class="btnContainer">
+                <a href="#" class="button">Read more</a>
+              </div>
             </div>
             <div class="imgContainer">
               <img
