added banner image and profile partial

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <!-- Profile -->
 
       <section class="profile" id="profile">
-        <div class="bgContainer"></div>
+        <div class="bannerContainer"></div>
         <div class="wrapper">
           <div class="imgContainer">
             <img src="./assets/small-box.jpg" alt="" />
