added styles for profile section

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               Eligendi reiciendis similique iste excepturi ratione suscipit
               omnis dolorum hic voluptatum corrupti!
             </p>
-            <a href="#" class="buton">Find Out More</a>
+            <a href="#" class="button">Find Out More</a>
           </div>
         </div>
       </section>
