added html for comments section

--- a/blog.html
+++ b/blog.html
@@ -61,6 +61,44 @@
               alias corporis quaerat?
             </p>
           </div>
+          <div class="commentsContainer">
+            <h3>Comments:</h3>
+            <div class="comment">
+              <div class="imgContinaer">
+                <img src="./assets/comment-1.jpg" alt="Profile Picture" />
+              </div>
+              <div class="textContainer">
+                <p class="commentDate">
+                  <time>Tuesday October 9th, 2018</time> by Jeremy
+                </p>
+                <p class="commentText">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Tenetur nobis iusto praesentium distinctio libero
+                  exercitationem numquam eos consequuntur temporibus minima
+                  totam adipisci dolores assumenda, ipsum accusamus vitae
+                  expedita aut voluptatum ad magni enim laborum. Numquam sed
+                  nostrum aliquam sunt nam.
+                </p>
+              </div>
+              <div class="comment">
+              <div class="imgContinaer">
+                <img src="./assets/comment-2.jpg" alt="Profile Picture" />
+              </div>
+              <div class="textContainer">
+                <p class="commentDate">
+                  <time>Wednesday October 10th, 2018</time> by Julia
+                </p>
+                <p class="commentText">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Tenetur nobis iusto praesentium distinctio libero
+                  exercitationem numquam eos consequuntur temporibus minima
+                  totam adipisci dolores assumenda, ipsum accusamus vitae
+                  expedita aut voluptatum ad magni enim laborum. Numquam sed
+                  nostrum aliquam sunt nam.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
