--- a/blog.html
+++ b/blog.html
@@ -99,6 +99,21 @@
               </div>
             </div>
           </div>
+
+          <form action="submit">
+            <label for="name" class="sr-only">Name</label>
+            <input type="text" id="name" placeholder="Name">
+            <label for="email" class="sr-only">Email address</label>
+            <input type="text" id="email" placeholder="Email address">
+            <label for="comment" class="sr-only">Comment</label>
+          <textarea
+            id="comment"
+            cols="30"
+            rows="10"
+            placeholder="Comment"
+          ></textarea>
+          <button type="submit" class="button">Post comment</button>
+          </form>
         </div>
       </section>
     </main>
