added sidebar and footer to blog page

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
     </header>
     <main id="mainContent">
       <div class="wrapper">
-        <section>
+        <section class="posts">
           <div class="postContainer">
             <div class="imgContainer">
               <img
@@ -117,7 +117,36 @@
             </form>
           </div>
         </section>
+        <section class="sidebar">
+          <div class="imgContainer">
+            <img
+              src="./assets/side-blog-image.jpg"
+              alt="Camera lense hovering over a hand"
+            />
+          </div>
+          <div class="sidebarContainer">
+            <h4>About Captured</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+              dolore fugit excepturi. <span>Find out more.</span>
+            </p>
+          </div>
+          <div class="sidebarContainer">
+            <h4>Recent posts</h4>
+            <ul>
+              <li><a href="#">Lorem ipsum dolor sit.</a></li>
+              <li><a href="#">Alias veniam voluptatem saepe.</a></li>
+              <li><a href="#">Maxime ipsa repellat itaque.</a></li>
+              <li><a href="#">Reiciendis similique aspernatur velit!</a></li>
+            </ul>
+          </div>
+        </section>
       </div>
     </main>
+    <footer>
+      <div class="wrapper">
+        <p>Copyright © 2018 HackerYou</p>
+      </div>
+    </footer>
   </body>
 </html>
