updated sass file structure

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <div class="wrapper">
         <p>Copyright © 2018 HackerYou</p>
       </div>
