--- a/blog.html
+++ b/blog.html
@@ -19,8 +19,9 @@
             <li><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
-
-        <h1>BLOG</h1>
+        <div class="headingContainer">
+          <h1>BLOG</h1>
+        </div>
       </div>
     </header>
     <main id="mainContent">
