--- a/blog.html
+++ b/blog.html
@@ -24,127 +24,122 @@
         </div>
       </div>
     </header>
-    <main id="mainContent">
-      <div class="wrapper">
-        <section class="posts">
-          <div class="postContainer">
-            <div class="imgContainer">
-              <img
-                src="./assets/blog-post-image.jpg"
-                alt="A person sitting in a field, taking a picture"
-              />
-            </div>
-            <h2>Finding Great Locations</h2>
-            <span><time>Monday May 4th, 2019</time> by Dieula</span>
-
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum ducimus qui veritatis esse ratione impedit repudiandae,
-              ut, optio cupiditate veniam quidem quis molestias, magnam
-              repellendus. Harum molestias reiciendis veniam at optio ipsum iure
-              minus omnis odit eaque libero fugiat totam nihil sint nostrum
-              quidem, quia a hic soluta facilis nam! Quo facilis cum veniam,
-              ratione eveniet pariatur provident vitae esse nisi nesciunt
-              laborum at quas, reprehenderit ea quos eos qui! Debitis non labore
-              ea exercitationem cupiditate illo fugiat at maiores pariatur illum
-              a, eaque aspernatur corrupti eius sit amet omnis expedita facere
-              aut laborum eligendi rem fugit! Tempora deserunt at nesciunt
-              assumenda laudantium sit corporis perferendis, voluptatum ipsa
-              non, nihil aliquam, molestias est asperiores quaerat reiciendis
-              iure molestiae eaque natus minus esse veniam. Quia blanditiis,
-              aperiam non tenetur odio fugit sint ipsam delectus animi tempore.
-              Eius, iure corporis, blanditiis distinctio voluptate
-              necessitatibus odio explicabo officiis ipsam eveniet voluptatibus
-              doloribus nulla deleniti suscipit voluptatum quae ea dolor
-              repudiandae sapiente soluta optio! Quisquam odio aut dicta, eum
-              neque quod consectetur distinctio cumque similique nostrum magni
-              maxime mollitia hic nesciunt pariatur iure repellendus
-              voluptatibus dolorem provident obcaecati fugit iste, quos numquam?
-              Doloremque impedit culpa veniam numquam quo quas similique dicta
-              alias corporis quaerat?
-            </p>
-          </div>
-          <div class="commentsContainer">
-            <h3>Comments:</h3>
-            <div class="comment">
-              <div class="imgContinaer">
-                <img src="./assets/comment-1.jpg" alt="Profile Picture" />
-              </div>
-              <div class="textContainer">
-                <p class="commentDate">
-                  <time>Tuesday October 9th, 2018</time> by Jeremy
-                </p>
-                <p class="commentText">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Tenetur nobis iusto praesentium distinctio libero
-                  exercitationem numquam eos consequuntur temporibus minima
-                  totam adipisci dolores assumenda, ipsum accusamus vitae
-                  expedita aut voluptatum ad magni enim laborum. Numquam sed
-                  nostrum aliquam sunt nam.
-                </p>
-              </div>
-            </div>
-            <div class="comment">
-              <div class="imgContinaer">
-                <img src="./assets/comment-2.jpg" alt="Profile Picture" />
-              </div>
-              <div class="textContainer">
-                <p class="commentDate">
-                  <time>Wednesday October 10th, 2018</time> by Julia
-                </p>
-                <p class="commentText">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Tenetur nobis iusto praesentium distinctio libero
-                  exercitationem numquam eos consequuntur temporibus minima
-                  totam adipisci dolores assumenda, ipsum accusamus vitae
-                  expedita aut voluptatum ad magni enim laborum. Numquam sed
-                  nostrum aliquam sunt nam.
-                </p>
-              </div>
-            </div>
-            <form action="submit">
-              <label for="name" class="sr-only">Name</label>
-              <input type="text" id="name" placeholder="Name" />
-              <label for="email" class="sr-only">Email address</label>
-              <input type="text" id="email" placeholder="Email address" />
-              <label for="comment" class="sr-only">Comment</label>
-              <textarea
-                id="comment"
-                cols="30"
-                rows="10"
-                placeholder="Comment"
-              ></textarea>
-              <button type="submit" class="button">Post</button>
-            </form>
-          </div>
-        </section>
-        <section class="sidebar">
+    <main id="blogMain" class="blogMain">
+      <section class="posts">
+        <div class="postContainer">
           <div class="imgContainer">
             <img
-              src="./assets/side-blog-image.jpg"
-              alt="Camera lense hovering over a hand"
+              src="./assets/blog-post-image.jpg"
+              alt="A person sitting in a field, taking a picture"
             />
           </div>
-          <div class="sidebarContainer">
-            <h4>About Captured</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-              dolore fugit excepturi. <span>Find out more.</span>
-            </p>
+          <h2>Finding Great Locations</h2>
+          <span><time>Monday May 4th, 2019</time> by Dieula</span>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            ducimus qui veritatis esse ratione impedit repudiandae, ut, optio
+            cupiditate veniam quidem quis molestias, magnam repellendus. Harum
+            molestias reiciendis veniam at optio ipsum iure minus omnis odit
+            eaque libero fugiat totam nihil sint nostrum quidem, quia a hic
+            soluta facilis nam! Quo facilis cum veniam, ratione eveniet pariatur
+            provident vitae esse nisi nesciunt laborum at quas, reprehenderit ea
+            quos eos qui! Debitis non labore ea exercitationem cupiditate illo
+            fugiat at maiores pariatur illum a, eaque aspernatur corrupti eius
+            sit amet omnis expedita facere aut laborum eligendi rem fugit!
+            Tempora deserunt at nesciunt assumenda laudantium sit corporis
+            perferendis, voluptatum ipsa non, nihil aliquam, molestias est
+            asperiores quaerat reiciendis iure molestiae eaque natus minus esse
+            veniam. Quia blanditiis, aperiam non tenetur odio fugit sint ipsam
+            delectus animi tempore. Eius, iure corporis, blanditiis distinctio
+            voluptate necessitatibus odio explicabo officiis ipsam eveniet
+            voluptatibus doloribus nulla deleniti suscipit voluptatum quae ea
+            dolor repudiandae sapiente soluta optio! Quisquam odio aut dicta,
+            eum neque quod consectetur distinctio cumque similique nostrum magni
+            maxime mollitia hic nesciunt pariatur iure repellendus voluptatibus
+            dolorem provident obcaecati fugit iste, quos numquam? Doloremque
+            impedit culpa veniam numquam quo quas similique dicta alias corporis
+            quaerat?
+          </p>
+        </div>
+        <div class="commentsContainer">
+          <h3>Comments:</h3>
+          <div class="comment">
+            <div class="profileImg">
+              <img src="./assets/comment-1.jpg" alt="Profile Picture" />
+            </div>
+            <div class="textContainer">
+              <p class="commentDate">
+                <time>Tuesday October 9th, 2018</time> by Jeremy
+              </p>
+              <p class="commentText">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+                nobis iusto praesentium distinctio libero exercitationem numquam
+                eos consequuntur temporibus minima totam adipisci dolores
+                assumenda, ipsum accusamus vitae expedita aut voluptatum ad
+                magni enim laborum. Numquam sed nostrum aliquam sunt nam.
+              </p>
+            </div>
           </div>
-          <div class="sidebarContainer">
-            <h4>Recent posts</h4>
-            <ul>
-              <li><a href="#">Lorem ipsum dolor sit.</a></li>
-              <li><a href="#">Alias veniam voluptatem saepe.</a></li>
-              <li><a href="#">Maxime ipsa repellat itaque.</a></li>
-              <li><a href="#">Reiciendis similique aspernatur velit!</a></li>
-            </ul>
+          <div class="comment">
+            <div class="profileImg">
+              <img src="./assets/comment-2.jpg" alt="Profile Picture" />
+            </div>
+            <div class="textContainer">
+              <p class="commentDate">
+                <time>Wednesday October 10th, 2018</time> by Julia
+              </p>
+              <p class="commentText">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+                nobis iusto praesentium distinctio libero exercitationem numquam
+                eos consequuntur temporibus minima totam adipisci dolores
+                assumenda, ipsum accusamus vitae expedita aut voluptatum ad
+                magni enim laborum. Numquam sed nostrum aliquam sunt nam.
+              </p>
+            </div>
           </div>
-        </section>
-      </div>
+          <form action="submit">
+            <label for="name" class="sr-only">Name</label>
+            <input type="text" id="name" placeholder="Name" />
+            <label for="email" class="sr-only">Email address</label>
+            <input type="text" id="email" placeholder="Email address" />
+            <label for="comment" class="sr-only">Comment</label>
+            <textarea
+              id="comment"
+              cols="30"
+              rows="10"
+              placeholder="Comment"
+            ></textarea>
+            <button type="submit" class="button">Post</button>
+          </form>
+        </div>
+      </section>
+      <section class="sidebar">
+        <div class="imgContainer">
+          <img
+            src="./assets/side-blog-image.jpg"
+            alt="Camera lense hovering over a hand"
+          />
+        </div>
+        <div class="sidebarContainer">
+          <h4>About Captured</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+            dolore fugit excepturi. <span>Find out more.</span>
+          </p>
+        </div>
+        <div class="sidebarContainer">
+          <h4>Recent posts</h4>
+          <ul>
+            <li><a href="#">Lorem ipsum dolor sit.</a></li>
+            <li><a href="#">Alias veniam voluptatem saepe.</a></li>
+            <li><a href="#">Maxime ipsa repellat itaque.</a></li>
+            <li><a href="#">Reiciendis similique aspernatur velit!</a></li>
+          </ul>
+        </div>
+      </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="wrapper">
         <p>Copyright © 2018 HackerYou</p>
       </div>
