added styling for comments sections

--- a/blog.html
+++ b/blog.html
@@ -73,11 +73,10 @@
                 <time>Tuesday October 9th, 2018</time> by Jeremy
               </p>
               <p class="commentText">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-                nobis iusto praesentium distinctio libero exercitationem numquam
-                eos consequuntur temporibus minima totam adipisci dolores
-                assumenda, ipsum accusamus vitae expedita aut voluptatum ad
-                magni enim laborum. Numquam sed nostrum aliquam sunt nam.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam
+                a, distinctio iusto quidem dolorum labore ducimus quam aliquid
+                neque illo tempore repellat reprehenderit beatae suscipit
+                facilis amet, hic inventore architecto?
               </p>
             </div>
           </div>
@@ -90,11 +89,10 @@
                 <time>Wednesday October 10th, 2018</time> by Julia
               </p>
               <p class="commentText">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-                nobis iusto praesentium distinctio libero exercitationem numquam
-                eos consequuntur temporibus minima totam adipisci dolores
-                assumenda, ipsum accusamus vitae expedita aut voluptatum ad
-                magni enim laborum. Numquam sed nostrum aliquam sunt nam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Explicabo ducimus ipsum nostrum libero nesciunt numquam. Odit
+                culpa incidunt enim reiciendis tenetur facere impedit, minima
+                exercitationem esse fugit sapiente dolorem beatae.
               </p>
             </div>
           </div>
