--- a/blog.html
+++ b/blog.html
@@ -96,12 +96,14 @@
               </p>
             </div>
           </div>
-          <form action="submit">
-            <label for="name" class="sr-only">Name</label>
-            <input type="text" id="name" placeholder="Name" />
-            <label for="email" class="sr-only">Email address</label>
-            <input type="text" id="email" placeholder="Email address" />
-            <label for="comment" class="sr-only">Comment</label>
+          <form class="form" action="submit">
+            <fieldset>
+              <label for="name" class="sr-only">Name</label>
+              <input type="text" id="name" placeholder="Name" />
+              <label for="email" class="sr-only">Email address</label>
+              <input type="text" id="email" placeholder="Email address" />
+              <label for="comment" class="sr-only">Comment</label>
+            </fieldset>
             <textarea
               id="comment"
               cols="30"
