added contact page and html for header

--- a/blog.html
+++ b/blog.html
@@ -110,7 +110,7 @@
               rows="10"
               placeholder="Comment"
             ></textarea>
-            <button type="submit" class="button">Post</button>
+            <button type="submit" class="button">Post Comment</button>
           </form>
         </div>
       </section>
