--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Contact Us</title>
   </head>
   <body>
@@ -23,6 +32,32 @@
         </div>
       </div>
     </header>
-    <main id="#mainContent"></main>
+    <main id="#mainContent">
+      <div class="wrapper">
+        <div class="contactInfo">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            </li>
+          </ul>
+          <h3>info@email.com</h3>
+          <address>
+            123-456-7890 <br />
+            123 Queen Street West, Unit 10<br />
+            Toronto, Ontario<br />
+            M5V2D5
+          </address>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
