--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
       <div class="wrapper">
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="./blog.html">Blog</a></li>
             <li><a href="./contact.html">Contact</a></li>
