added styling for contact form section

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </header>
-    <main id="#mainContent">
+    <main id="#contactMain" class="contactMain">
       <div class="wrapper">
         <section class="contactInfo">
           <ul>
@@ -51,7 +51,7 @@
           </ul>
           <h3>info@email.com</h3>
           <address>
-            123-456-7890 <br />
+            123 - 456 - 7890 <br />
             123 Queen Street West, Unit 10<br />
             Toronto, Ontario<br />
             M5V2D5
