fixed blog section in index styling

--- a/index.html
+++ b/index.html
@@ -61,27 +61,33 @@
               <img src="./assets/left-image.jpg" alt="A camera on a tripod" />
             </div>
             <div class="textContainer">
-              <h3>Unlock you skills</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
-                suscipit libero blanditiis repellat reiciendis rerum cumque
-                reprehenderit expedita qui. Rem, illo. Tempore similique, culpa
-                in vero nemo deserunt sequi debitis quam esse, dolores unde!
-              </p>
-              <a href="#" class="button">Read more</a>
+              <div class="inner">
+                <h3>Unlock you skills</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                  suscipit libero blanditiis repellat reiciendis rerum cumque
+                  reprehenderit expedita qui. Rem, illo. Tempore similique,
+                  culpa in vero nemo deserunt sequi debitis quam esse, dolores
+                  unde!
+                </p>
+                <a href="#" class="button">Read more</a>
+              </div>
             </div>
           </div>
           <div class="row rowTwo">
             <div class="textContainer">
-              <h3>Getting new gear</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
-                suscipit libero blanditiis repellat reiciendis rerum cumque
-                reprehenderit expedita qui. Rem, illo. Tempore similique, culpa
-                in vero nemo deserunt sequi debitis quam esse, dolores unde!
-              </p>
-              <div class="btnContainer">
-                <a href="#" class="button">Read more</a>
+              <div class="inner">
+                <h3>Getting new gear</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                  suscipit libero blanditiis repellat reiciendis rerum cumque
+                  reprehenderit expedita qui. Rem, illo. Tempore similique,
+                  culpa in vero nemo deserunt sequi debitis quam esse, dolores
+                  unde!
+                </p>
+                <div class="btnContainer">
+                  <a href="#" class="button">Read more</a>
+                </div>
               </div>
             </div>
             <div class="imgContainer">
