added missing a tag in sidebar

--- a/blog.html
+++ b/blog.html
@@ -158,7 +158,7 @@
           <h4>About Captured</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-            dolore fugit excepturi. <span>Find out more.</span>
+            dolore fugit excepturi. <span><a href="#">Find out more.</a></span>
           </p>
         </div>
         <div class="sidebarContainer">
